# research-dossier-agent

./: README.md
simple-agent/: main.py  pyproject.toml
